# Big-Data-Analysis_Assignment_Exam

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  report.md
outputs/: results.txt  trajectory_map.html
src/: clean.py  config.py  detect.py  ingest.py  main.py  spark_utils.py  visualize.py
